--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "babel-preset-react": "^6.24.1",
     "body-parser": "^1.17.2",
     "compression": "^1.6.2",
+    "cookie-parser": "^1.4.3",
+    "cookie-session": "^2.0.0-beta.2",
     "email-validator": "^1.0.7",
     "express": "^4.15.3",
     "express-graphql": "^0.6.6",
@@ -29,7 +31,9 @@
     "react": "^15.6.1",
     "react-apollo": "^1.4.3",
     "react-dom": "^15.6.1",
+    "request": "^2.81.0",
     "rethinkdb": "^2.3.3",
+    "sjcl": "^1.0.7",
     "webpack": "^3.1.0"
   },
   "devDependencies": {
