--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "graphql": "^0.10.3",
     "jquery": "^3.2.1",
     "lodash": "^4.17.4",
+    "nodemailer": "^4.0.1",
     "nodemon": "^1.11.0",
+    "pug": "^2.0.0-rc.2",
     "react": "^15.6.1",
     "react-apollo": "^1.4.3",
     "react-dom": "^15.6.1",
