--- a/package.json
+++ b/package.json
@@ -12,6 +12,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/body-parser": "^1.16.4",
+    "@types/compression": "^0.0.33",
+    "@types/cookie-parser": "^1.4.0",
+    "@types/express": "^4.0.36",
+    "@types/express-graphql": "^0.0.33",
+    "@types/graphql": "^0.10.1",
+    "@types/lodash": "^4.14.71",
+    "@types/nodemailer": "^3.1.0",
+    "@types/pug": "^2.0.4",
+    "@types/request": "^2.0.0",
+    "@types/rethinkdb": "^2.3.3",
+    "@types/sjcl": "^1.0.28",
     "babel-cli": "^6.24.1",
     "babel-polyfill": "^6.23.0",
     "babel-preset-env": "^1.6.0",
