--- a/package.json
+++ b/package.json
@@ -1,56 +1,51 @@
 {
-  "name": "gql",
+  "name": "slack_invite",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "babel src -d lib -w -s",
+    "build": "tsc",
     "bundle": "webpack --watch",
     "serve": "nodemon lib/server_main.js"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Jon Malmaud",
+  "license": "MIT",
   "dependencies": {
     "@types/body-parser": "^1.16.4",
     "@types/compression": "^0.0.33",
     "@types/cookie-parser": "^1.4.0",
     "@types/express": "^4.0.36",
     "@types/express-graphql": "^0.0.33",
-    "@types/graphql": "^0.10.1",
+    "@types/graphql": "^0.10.2",
     "@types/lodash": "^4.14.71",
     "@types/nodemailer": "^3.1.0",
     "@types/pug": "^2.0.4",
+    "@types/react": "^16.0.0",
+    "@types/react-dom": "^15.5.1",
     "@types/request": "^2.0.0",
     "@types/rethinkdb": "^2.3.3",
     "@types/sjcl": "^1.0.28",
-    "babel-cli": "^6.24.1",
     "babel-polyfill": "^6.23.0",
-    "babel-preset-env": "^1.6.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
     "body-parser": "^1.17.2",
-    "compression": "^1.6.2",
+    "compression": "^1.7.0",
     "cookie-parser": "^1.4.3",
     "cookie-session": "^2.0.0-beta.2",
-    "email-validator": "^1.0.7",
+    "email-validator": "^1.1.1",
     "express": "^4.15.3",
-    "express-graphql": "^0.6.6",
-    "graphql": "^0.10.3",
+    "express-graphql": "^0.6.7",
+    "graphql": "^0.10.5",
     "jquery": "^3.2.1",
     "lodash": "^4.17.4",
     "nodemailer": "^4.0.1",
     "nodemon": "^1.11.0",
-    "pug": "^2.0.0-rc.2",
+    "pug": "^2.0.0-rc.3",
     "react": "^15.6.1",
-    "react-apollo": "^1.4.3",
+    "react-apollo": "^1.4.10",
     "react-dom": "^15.6.1",
     "request": "^2.81.0",
     "rethinkdb": "^2.3.3",
     "sjcl": "^1.0.7",
-    "webpack": "^3.1.0"
-  },
-  "devDependencies": {
-    "babel-plugin-relay": "^1.1.0"
+    "webpack": "^3.4.1"
   }
 }
