--- a/stack-dev.yml
+++ b/stack-dev.yml
@@ -14,11 +14,11 @@ services:
     depends_on:
       - db
     volumes:
-      - "${HOME}/gql/lib:/app/lib"
-      - "${HOME}/gql/assets:/app/assets"
-      - "${HOME}/tmp/logs:/logs"
-      - "${HOME}/gql/templates:/app/templates"
-      - "${HOME}/tmp/secrets:/secrets"
+      - "./lib:/app/lib"
+      - "./assets:/app/assets"
+      - "./tmp/logs:/logs"
+      - "./templates:/app/templates"
+      - "./secrets:/secrets"
   db:
     image: rethinkdb:2.3.5
     deploy:
