--- a/package.json
+++ b/package.json
@@ -15,16 +15,14 @@
     "@types/body-parser": "^1.16.4",
     "@types/compression": "^0.0.33",
     "@types/cookie-parser": "^1.4.0",
-    "@types/express": "^4.0.36",
     "@types/express-graphql": "^0.0.33",
     "@types/graphql": "^0.10.2",
     "@types/lodash": "^4.14.71",
     "@types/nodemailer": "^3.1.0",
     "@types/pug": "^2.0.4",
-    "@types/react": "^16.0.0",
+    "@types/react": "^16.0.25",
     "@types/react-dom": "^15.5.1",
-    "@types/request": "^2.0.0",
-    "@types/rethinkdb": "^2.3.3",
+    "@types/rethinkdb": "^2.3.8",
     "@types/sjcl": "^1.0.28",
     "babel-polyfill": "^6.23.0",
     "body-parser": "^1.17.2",
@@ -43,9 +41,17 @@
     "react": "^15.6.1",
     "react-apollo": "^1.4.10",
     "react-dom": "^15.6.1",
-    "request": "^2.81.0",
+    "request": "^2.83.0",
+    "request-promise-native": "^1.0.5",
     "rethinkdb": "^2.3.3",
     "sjcl": "^1.0.7",
-    "webpack": "^3.4.1"
+    "webpack": "^3.4.1",
+    "ws": "^3.3.2"
+  },
+  "devDependencies": {
+    "@types/express": "^4.0.39",
+    "@types/request": "^2.0.8",
+    "@types/request-promise-native": "^1.0.10",
+    "@types/ws": "^3.2.0"
   }
 }
