--- a/deployment/ingress.yaml
+++ b/deployment/ingress.yaml
@@ -1,8 +1,33 @@
-apiVersion: extensions/v1beta1
-kind: Ingress
+apiVersion: apps/v1beta2
+kind: Deployment
 metadata:
-  name: slack-ingress
+  name: ingress
 spec:
-  backend:
-    serviceName: slack-frontend
-    servicePort: 4000
+  replicas: 1
+  selector:
+    matchLabels:
+      app: slack-invite
+      role: ingress
+  template:
+    metadata:
+      labels:
+        app: slack-invite
+        role: ingress
+        time: "1042"
+    spec:
+      containers:
+        - name: proxy
+          image: malmaud/juliaslackproxy:1.0
+          ports:
+          - containerPort: 80
+            hostPort: 80
+        volumeMounts:
+          - mountPath: /etc/letsencrypt
+            readOnly: true
+            name: ssl-volume
+      volumes:
+        -name: ssl-volume
+         hostPath:
+          type: DirectoryOrCreate
+          path: /ssl
+
