--- a/deployment/slack_db.yaml
+++ b/deployment/slack_db.yaml
@@ -27,6 +27,6 @@ spec:
             name: db
       volumes:
         - name: db-volume
-          hostPath:
-            type: DirectoryOrCreate
-            path: /data
+          gcePersistentDisk:
+            pdName: malmadisk
+            fsType: ext4
