--- a/ingress/nginx.conf
+++ b/ingress/nginx.conf
@@ -10,35 +10,40 @@ http
   server
   {
     listen 80;
-    server_name slackinvite.malmaud.com slackinvite.julialang.org;
+    server_name slackinvite.malmaud.com slackinvite.julialang.org kube.malmaud.com;
 
     access_log /logs/slackinvite_access.log;
     error_log /logs/slackinvite_error.log;
+
+    location /.well-known/acme-challenge/
+    {
+      default_type "text/plain";
+      root /var/www/letsencrypt;
+    }
 
     location /
     {
       proxy_pass http://slack-frontend:4000;
     }
 
-    location /db/
-    {
-      auth_basic "Administrators only";
-      auth_basic_user_file /passwd;
-      proxy_pass http://slack-db:8080/;
-    }
-
-
-    # listen 443 ssl; # managed by Certbot
-    # ssl_certificate /etc/letsencrypt/live/slackinvite.malmaud.com/fullchain.pem; # managed by Certbot
-    # ssl_certificate_key /etc/letsencrypt/live/slackinvite.malmaud.com/privkey.pem; # managed by Certbot
-    # include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
-
-
-    # if ($scheme != "https")
+    # location /db/
     # {
-    #   return 301 https://$host$request_uri;
-
+    #   auth_basic "Administrators only";
+    #   auth_basic_user_file /passwd;
+    #   proxy_pass http://slack-db:8080/;
     # }
+
+    listen 443 ssl;
+    ssl_certificate /etc/letsencrypt/live/kube.malmaud.com/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/kube.malmaud.com/privkey.pem; # managed by Certbot
+    include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
+
+
+    if ($scheme != "https")
+    {
+      return 301 https://$host$request_uri;
+
+    }
     # # managed by Certbot
 
 
