--- a/deployment/ingress.yaml
+++ b/deployment/ingress.yaml
@@ -13,21 +13,30 @@ spec:
       labels:
         app: slack-invite
         role: ingress
-        time: "1042"
+        time: "514"
     spec:
       containers:
         - name: proxy
           image: malmaud/juliaslackproxy:1.0
+          imagePullPolicy: Always
           ports:
           - containerPort: 80
             hostPort: 80
-        volumeMounts:
-          - mountPath: /etc/letsencrypt
-            readOnly: true
-            name: ssl-volume
+          - containerPort: 443
+            hostPort: 443
+          volumeMounts:
+            - mountPath: /etc/letsencrypt
+              readOnly: true
+              name: ssl-volume
+            - name: acme-challenge
+              mountPath: /var/www/letsencrypt
       volumes:
-        -name: ssl-volume
-         hostPath:
-          type: DirectoryOrCreate
-          path: /ssl
+        - name: ssl-volume
+          hostPath:
+           type: Directory
+           path: /etc/letsencrypt
+        - name: acme-challenge
+          hostPath:
+            type: DirectoryOrCreate
+            path: /etc/acme
 
