--- a/letsencrypt/Dockerfile
+++ b/letsencrypt/Dockerfile
@@ -4,5 +4,6 @@ RUN apt-get install -y software-properties-common
 RUN add-apt-repository ppa:certbot/certbot
 RUN apt-get update -y
 RUN apt-get install -y python-certbot-nginx
-
-CMD tail -f /dev/null
+COPY crontab /etc/cron.d/letsencrypt-cron
+RUN chmod 0644 /etc/cron.d/letsencrypt-cron
+CMD cron && tail -f /dev/null
