Use persistent volume claims

--- a/deployment/slack_db.yaml
+++ b/deployment/slack_db.yaml
@@ -27,6 +27,5 @@ spec:
             name: db
       volumes:
         - name: db-volume
-          gcePersistentDisk:
-            pdName: malmadisk
-            fsType: ext4
+          persistentVolumeClaim:
+            claimName: db-disk
