--- a/ingress/nginx.conf
+++ b/ingress/nginx.conf
@@ -21,10 +21,17 @@ http
       root /var/www/letsencrypt;
     }
 
+    location /game
+    {
+      proxy_pass http://game.game.svc.cluster.local:10000;
+    }
+
     location /
     {
       proxy_pass http://slack-frontend:4000;
     }
+
+
 
     # location /db/
     # {
@@ -48,4 +55,6 @@ http
 
 
   }
+
+
 }
