Changes for new ingress system

--- a/deployment/slack_db.yaml
+++ b/deployment/slack_db.yaml
@@ -28,4 +28,4 @@ spec:
       volumes:
         - name: db-volume
           persistentVolumeClaim:
-            claimName: db-disk
+            claimName: slack-db-disk
