Explicitly set 0 limits

--- a/deployment/slack_db.yaml
+++ b/deployment/slack_db.yaml
@@ -25,6 +25,9 @@ spec:
             name: webui
           - containerPort: 28015
             name: db
+          resources:
+            limits:
+              cpu: "0m"
       volumes:
         - name: db-volume
           persistentVolumeClaim:
